# partition

./: Cargo.toml  LICENSE  README.md  b.test  benchmark.csv  benchmark2.csv  benchmark4.csv  benchmark5.csv  benchmark6.csv  out.txt
.github/workflows/: release.yml  release_pdf.yml
paper/: abstract.tex  auto_recompile.sh  compile.sh  main.tex  references.bib  references.tex  titlepage.tex
paper/chapters/: abstract.tex  appendix_a.tex  conclusion.tex  introduction.tex  literature_review.tex  methodology.tex  references.tex  results.tex  titlepage.tex
paper/sections/: 01_introduction.tex  02_outline.tex  03_implementation.tex  04_conclusion.tex  appendix_b.tex  discussion.tex  implementation.tex
proptest-regressions/approximation/: tests.txt
src/: approximation.rs  characteristic.rs  fft.rs  helpers.rs  lib.rs  main.rs  subset_sum.rs
src/approximation/: additive.rs  additive_merge.rs  interval.rs  mod.rs  multiplicative.rs  multiplicative_merge.rs  tests.rs
src/fft/: complex.rs  mod.rs  number_theoretic.rs
src/helpers/: mod.rs  test.rs
src/tests/: mod.rs
