[package]
name = "partition"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustfft = "6.2.0"
proptest = { version = "1.4.0", optional = true }
concrete-ntt = "0.1.2"

[dev-dependencies]


[lib]
path = "src/lib.rs"

[[bin]]
name = "partition"
path = "src/main.rs"

[features]

use-proptest = ["proptest"]
